--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -103,12 +103,13 @@
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
-            android:background="@drawable/mybutton"
+            android:background="@drawable/mybutton_light"
             android:fontFamily="casual"
             android:foreground="?attr/selectableItemBackground"
             android:minLines="1"
             android:onClick="back"
-            android:text="@string/change_level" />
+            android:text="@string/change_level"
+            android:textColor="@color/colorAccent" />
 
         <Button
             android:id="@+id/tryAgain"
@@ -117,11 +118,12 @@
             android:layout_height="40dp"
             android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:background="@drawable/mybutton"
+            android:background="@drawable/mybutton_light"
             android:fontFamily="casual"
             android:foreground="?attr/selectableItemBackground"
             android:onClick="restartActivity"
-            android:text="@string/try_again" />
+            android:text="@string/try_again"
+            android:textColor="@color/colorAccent" />
     </TableRow>
 
 </LinearLayout>
