--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,12 @@
         android:layout_height="85dp"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
-        android:background="@drawable/mybutton"
+        android:background="@drawable/mybutton_light"
         android:fontFamily="casual"
         android:foreground="?attr/selectableItemBackground"
         android:onClick="switchToNewGameActivity"
         android:text="@string/new_game"
+        android:textColor="@color/colorAccent"
         app:layout_column="0"
         app:layout_row="1" />
 
@@ -43,11 +44,12 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/mybutton"
+        android:background="@drawable/mybutton_light"
         android:fontFamily="casual"
         android:foreground="?attr/selectableItemBackground"
         android:onClick="switchToSettingsActivity"
         android:text="@string/settings"
+        android:textColor="@color/colorAccent"
         app:layout_column="0"
         app:layout_row="2" />
 
@@ -59,11 +61,12 @@
         android:layout_marginBottom="60dp"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
-        android:background="@drawable/mybutton"
+        android:background="@drawable/mybutton_light"
         android:fontFamily="casual"
         android:foreground="?attr/selectableItemBackground"
         android:onClick="quitApp"
         android:text="@string/exit"
+        android:textColor="@color/colorAccent"
         app:layout_column="0"
         app:layout_row="3" />
 
