--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,30 +7,6 @@
     android:background="@drawable/background_settings"
     tools:context=".activity.Settings">
 
-    <Spinner
-        android:id="@+id/language_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentTop="false"
-        android:layout_below="@+id/language_label"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp" />
-
-    <Button
-        android:id="@+id/sett_back_btn"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="110dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="53dp"
-        android:background="@drawable/mybutton"
-        android:fontFamily="casual"
-        android:foreground="?attr/selectableItemBackground"
-        android:onClick="backToMain"
-        android:text="@string/done" />
-
     <TextView
         android:id="@+id/language_label"
         android:layout_width="wrap_content"
@@ -43,14 +19,34 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
+    <Spinner
+        android:id="@+id/language_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:layout_below="@+id/language_label"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp" />
+
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/language_spinner"
+        android:layout_marginEnd="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorDivider" />
+
     <Switch
         android:id="@+id/sound_switch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/language_spinner"
+        android:layout_below="@+id/divider1"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="casual"
         android:text="@string/sound_label"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
@@ -58,18 +54,75 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/sound_switch"
+        android:layout_marginEnd="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorDivider" />
+
     <Switch
         android:id="@+id/time_switch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sound_switch"
+        android:layout_below="@+id/divider2"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="casual"
         android:text="@string/forTime_label"
         android:textColor="@color/colorSettingsText"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/time_switch"
+        android:layout_marginEnd="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorDivider" />
+
+    <TextView
+        android:id="@+id/button_theme_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/divider3"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="casual"
+        android:text="@string/button_theme_label"
+        android:textColor="@color/colorSettingsText"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/button_theme_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_theme_label"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp" />
+
+    <Button
+        android:id="@+id/sett_back_btn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="110dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="53dp"
+        android:background="@drawable/mybutton_light"
+        android:fontFamily="casual"
+        android:foreground="?attr/selectableItemBackground"
+        android:onClick="backToMain"
+        android:text="@string/done"
+        android:textColor="@color/colorAccent" />
 
 </RelativeLayout>
