--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,9 @@
     <color name="colorTextLight">#edc678</color>
     <color name="colorSpinnerBody">#ccccff</color>
     <color name="colorDialog">#ffc266</color>
+    <color name="colorDivider">#737373</color>
 
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
-
     <color name="black_overlay">#66000000</color>
 </resources>
