--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:fontFamily="casual"
         android:foreground="?attr/selectableItemBackground"
         android:onClick="switchToNewGameActivity"
+        android:paddingTop="2dp"
         android:text="@string/new_game"
         android:textColor="@color/colorAccent"
         app:layout_column="0"
@@ -48,6 +49,7 @@
         android:fontFamily="casual"
         android:foreground="?attr/selectableItemBackground"
         android:onClick="switchToSettingsActivity"
+        android:paddingTop="2dp"
         android:text="@string/settings"
         android:textColor="@color/colorAccent"
         app:layout_column="0"
@@ -65,6 +67,7 @@
         android:fontFamily="casual"
         android:foreground="?attr/selectableItemBackground"
         android:onClick="quitApp"
+        android:paddingTop="2dp"
         android:text="@string/exit"
         android:textColor="@color/colorAccent"
         app:layout_column="0"
