--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,16 @@
     android:orientation="vertical"
     tools:context=".activity.MainMenu">
 
+    <Button
+        android:id="@+id/rate_btn"
+        android:layout_width="53dp"
+        android:layout_height="50dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/star"
+        android:onClick="goToGameUrl" />
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
@@ -17,6 +27,7 @@
         android:layout_marginStart="10dp"
         android:layout_weight="1"
         android:contentDescription="@string/logo"
+        android:paddingBottom="20dp"
         android:src="@drawable/logo" />
 
     <Button
