--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -99,7 +99,7 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="15dp"
             android:layout_weight="1"
             android:background="@drawable/mybutton_light"
             android:fontFamily="casual"
@@ -115,15 +115,25 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
             android:layout_weight="1"
             android:background="@drawable/mybutton_light"
             android:fontFamily="casual"
             android:foreground="?attr/selectableItemBackground"
             android:onClick="restartActivity"
             android:paddingTop="2dp"
-            android:text="@string/try_again"
+            android:text="@string/restart_button"
             android:textColor="@color/colorAccent" />
+
+        <Button
+            android:id="@+id/info"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/info"
+            android:onClick="info" />
     </TableRow>
 
 </LinearLayout>
