--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -128,6 +128,7 @@
 
         <Button
             android:id="@+id/info"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="10dp"
